Revision history for perl distribution Convos

5.25 Not Released
 - Add feedback when changing channel mode #454
 - Add rendering of banlist, exceptlist, invitelist and quietlist #432
 - Add query_db() method to bot plugins
 - Entering "+" in the quick search bar will show conversation with unread messages
 - Entering "+#" in the quick search bar will show channels with unread messages
 - Entering "+@" in the quick search bar will show private conversation with unread messages

5.24 2021-02-11T09:30:00+0900
 - Will not show participants in sidebar if already visible on the right side
 - Will not jump to the first conversation when leaving a conversation
 - Fix loading conversations in "Add conversation"

5.23 2021-02-11T08:03:00+0900
 - Fix hover to show timestamp for message
 - Fix loading more messages if scrollbar is not seen #558

5.22 2021-02-10T10:09:00+0900
 - Add support for nicer message-of-the-day (MOTD) server messages
 - Fix rendering multiple spaces in a string
 - Revert "Changed from connection ID to real_host in chat sidebar"
 - Will not render message details if the message is simple

5.22 2021-02-08T10:05:00+0900
 - Fix clicking on nicks in conversation

5.21 2021-02-05T09:23:00+0900
 - Fix handling expandUrlToMedia #562
 - Fix keeping track of which nick is yours in conversations

5.20 2021-02-04T13:00:00+0900
 - Fix handling offline/online nick logic

5.19 2021-02-04T12:00:00+0900
 - Fix typo in calculateModes()
 - Fix number of participants in ChatParticipants
 - Fix parsing user modes

5.18 2021-02-04T11:47:00+0900
 - Fix typo in Participants.js

5.17 2021-02-04T11:42:00+0900
 - Fix handling join events
 - Fix handling /names response
 - Fix handling /whois response

5.16 2021-02-04T11:28:00+0900
 - Add nick to video conversation url
 - Add /ns (msg nickserv) and /cs (msg chanserv) aliases
 - Fix rendering action messages
 - Improved video conversation name for private conversations
 - Improved rendering of new conversations
